tests/machine/x/go/dataset_where_filter.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/dataset_where_filter.go:51:7: non-boolean condition in if statement

1: //go:build ignore
